changes pre-review